# nickmcavoy-dotcom

./: .gitignore  README.md  new-post.hs  new_post.hs  new_post.sh  nickoncomputing.cabal  post_queue  regen.sh
_site/: archive.html  atom.xml  index.html
_site/about/: index.html
_site/css/: bootstrap.css  main.css  responsive.css
_site/food/: atom.xml  index.html
_site/muse/: atom.xml  index.html
_site/nick/: atom.xml  index.html
_site/tech/: atom.xml  index.html
_site/yhwh/: atom.xml  index.html
content/: index.md
content/about/: food.md  index.md  muse.md  nick.md  tech.md  yhwh.md
content/drafts/: 2013-10-23-nicks-first-post.markdown  2014-01-27-jimi-hendrix-and-the-freedom-to-waste-your-life.markdown  2014-02-15-a-balanced-diet.markdown  2014-04-22-life-and-death-really.markdown  2014-04-29-sunset-of-the-literary-mind.markdown  2014-06-17-fashion.markdown  2014-06-17-honeygrow-and-the-importance-of-backpressure.markdown  2014-07-08-puerto-rico-travelogue.markdown  2014-08-13-against-streets.markdown  2014-09-04-thats-what-you-get.markdown  2015-01-12-bens-chili-bowl-and-chaps-pit-beef.markdown  2015-02-11-engineering-the-mundane.markdown  2015-02-14-hated-cheese.markdown  2015-02-28-the-once-in-a-lifetime-trip-before-the-once-in-a-lifetime-trip.markdown  2015-04-24-eating-to-lose-weight.markdown  2015-06-04-how-to-fly.markdown  2015-06-11-self-aware-faith.markdown  2015-06-12-why-engineer-daily-life.markdown  (+3 more)
css/: main.less
src/: Main.hs
src/Nick/: Regex.hs  (+2 more)
templates/: default.html  default_subblog.html  post-item.html  subblog-index.html
(+141 files in other folders)
