name:          nickoncomputing
version:       0.0.0
description:   A Hakyll blog site 
copyright:     (c) 2013 Nicholas McAvoy and Travis Brown
license-file:  LICENSE.txt
author:        Nicholas McAvoy
maintainer:    nicholas.mcavoy@gmail.com
build-type:    Simple
cabal-version: >= 1.2

library
  ghc-options:     -Wall -O2
  hs-source-dirs:  src
  exposed-modules:
  build-depends:
    base >= 2,
    blaze-html >= 0.5.1.3,
    containers >= 0.5.0.0,
    hakyll >= 4.5.5.0,
    filepath,
    pandoc >= 1.13.1,
    regex-tdfa >= 1.1.8,
    split >= 0.2.2

executable site
  ghc-options:     -Wall -O2
  hs-source-dirs:  src
  main-is:         Main.hs

